add non-cube block shape support (slabs + stairs)
Adds a ShapeVoxelizer that turns arbitrary vanilla model `elements`
arrays into sparse chunk lattices, replacing the previous full-cube-only
gate. Slabs (bottom/top/full), straight stairs, and stairs corner
variants (inner_left/right, outer_left/right) all bake into actual
shape-correct lattices instead of being rejected.

Architecture changes:
- BlockModel becomes a multi-shape container — one named shape per
  distinct model path the blockstate references, plus a variant →
  (shape, rotation) lookup table. Cube blocks have one shape (the
  existing CubeFaces with tint + overlays); slabs have three (bottom,
  top, full=double); stairs have three (straight, inner, outer).
- TextureSplitter dispatches by shape: cube → existing per-face slice
  path; voxelized → pass through whatever ShapeVoxelizer produced.
- TsraFormat bumped to v2: per-shape chunk records + per-chunk outward-
  face masks + variant → shape binding. v1 readers transparently
  upgrade (synthesize default shape + cube-boundary outward masks).
- HeadsRegistry, FakeBlockFactory, BlockBreakListener, and the progress
  listener thread shapeKey through their spawn paths. Runtime is fully
  shape-agnostic — outward faces come from the registry, not from cube
  boundary checks.

Tests cover the voxelizer cell occupancy, v1 ↔ v2 format compat, and
the existing pin-down tests pass after minor signature updates.